# apparatus

./: .gitmodules  CMakeLists.txt  README.md
cmake/: app-compilerflags.cmake  app-dependencies.cmake
python/: consensus.py
src/: CMakeLists.txt  FastaArrayRead.h
src/tools/: extract_subreads.cpp  juliet_pileup.cpp  mafft_pileup.cpp
tools/: format-all
